--- a/tierlist/src/components/TierListHeader/tierListHeader.scss
+++ b/tierlist/src/components/TierListHeader/tierListHeader.scss
@@ -1,5 +1,7 @@
 .header {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
     font-size: 40px;
     background-color: rgb(231, 122, 255);
+    height: 60px;
 }
